// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic 1`] = `
.c0 {
  width: 20px;
  height: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: transparent;
  border-color: #cccccc;
}

.c0:hover {
  border-color: #7a7a7a;
}

.c0:active {
  background-color: #7a7a7a;
}

.c1 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: pointer;
}

<div
  className="c0"
>
  <input
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Checkbox prop disabled 1`] = `
.c0 {
  width: 20px;
  height: 20px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #000000;
  background-color: transparent;
  border-color: #cccccc;
  border-color: #7a7a7a;
}

.c0:hover {
  border-color: #7a7a7a;
}

.c0:active {
  background-color: #7a7a7a;
}

.c1 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: not-allowed;
}

<div
  className="c0"
  disabled={true}
>
  <input
    className="c1"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;
